--- a/Clockify-API-Client-Core.TesterConsole/Clockify-API-Client-Core.TesterConsole.csproj
+++ b/Clockify-API-Client-Core.TesterConsole/Clockify-API-Client-Core.TesterConsole.csproj
@@ -8,7 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.7.0-preview8.19405.3" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="4.6.0-preview8.19405.3" />
+    <PackageReference Include="System.Drawing.Common" Version="4.6.0-preview8.19405.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Clockify-API-Client-Core\Clockify-API-Client-Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="DevExpress.Data.v19.1">
+      <HintPath>E:\Program Files (x86)\DevExpress 19.1\Components\Bin\Framework\DevExpress.Data.v19.1.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.Xpo.v19.1">
+      <HintPath>E:\Program Files (x86)\DevExpress 19.1\Components\Bin\Framework\DevExpress.Xpo.v19.1.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
