--- a/Clockify-API-Client-Core.TesterConsole/Clockify-API-Client-Core.TesterConsole.csproj
+++ b/Clockify-API-Client-Core.TesterConsole/Clockify-API-Client-Core.TesterConsole.csproj
@@ -8,9 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GetterSetter.Fody" Version="1.0.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0-preview8.19405.3" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="4.6.0-preview8.19405.3" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0-preview8.19405.3" />
+    <PackageReference Include="System.Reactive" Version="4.2.0-preview.625" />
   </ItemGroup>
 
   <ItemGroup>
