--- a/Clockify-API-Client-Core/Clockify-API-Client-Core.csproj
+++ b/Clockify-API-Client-Core/Clockify-API-Client-Core.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSharpFunctionalExtensions" Version="1.19.1" />
+    <PackageReference Include="GetterSetter.Fody" Version="1.0.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
